--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,35 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.seleniumhq.selenium:selenium-java:4.14.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+	testImplementation 'io.github.bonigarcia:webdrivermanager:5.6.3'
+	testImplementation 'io.github.bonigarcia:selenium-jupiter:5.0.1'
 }
 
 tasks.named('test') {
+	useJUnitPlatform()
+}
+
+tasks.register('unitTest', type: Test) {
+	description = 'Run unit tests'
+	group = 'verification'
+
+	filter {
+		excludeTestsMatching '*FunctionalTest'
+	}
+}
+
+task.register('functionalTest', type: Test) {
+	description = 'Run functional tests'
+	group = 'verification'
+
+	filter {
+		includeTestsMatching '*FunctionalTest'
+	}
+}
+
+task.withType(Test).configureEach {
 	useJUnitPlatform()
 }
