--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 21
-          distribution: "corretto" # Alternative distribution options are available
+          distribution: "temurin" # Alternative distribution options are available
+      - name: Set gradlew as executable
+        run: chmod +x ./gradlew
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
